--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "dependencies": {
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-collections": "^0.7.0",
+    "metalsmith-filter": "^1.0.2",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
-    "metalsmith-collections": "^0.7.0",
-    "metalsmith-rollup": "^0.2.0"
-},
-  "devDependencies": {
-  }
+    "metalsmith-rollup": "^0.2.0",
+    "metalsmith-sass": "^1.3.0"
+  },
+  "devDependencies": {}
 }
