--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "static-site-example",
   "private": true,
+  "scripts": {
+    "lint-js": "eslint 'src/**/*.js'",
+    "lint-css": "stylelint 'src/**/*.scss' --syntax scss"
+  },
   "dependencies": {
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
@@ -12,5 +16,8 @@
     "metalsmith-rollup": "^0.2.0",
     "metalsmith-sass": "^1.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^3.8.1",
+    "stylelint": "^7.5.0"
+  }
 }
