--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "static-site-example",
   "private": true,
   "scripts": {
+    "serve": "browser-sync start --server 'build'",
+    "test-e2e": "browser-sync start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
     "lint-js": "eslint 'src/**/*.js'",
-    "lint-css": "stylelint 'src/**/*.scss' --syntax scss"
+    "lint-css": "stylelint 'src/**/*.scss' --syntax scss",
+    "postinstall": "node test/nightwatch.conf.js"
   },
   "dependencies": {
     "handlebars": "^4.0.5",
@@ -17,7 +20,10 @@
     "metalsmith-sass": "^1.3.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.17.5",
     "eslint": "^3.8.1",
+    "nightwatch": "^0.9.8",
+    "selenium-download": "^2.0.6",
     "stylelint": "^7.5.0"
   }
 }
