--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "scripts": {
     "build": "node index",
-    "serve": "browser-sync start --server 'build'",
+    "serve": "npm run build & ./node_modules/browser-sync/bin/browser-sync.js start --config 'bs-config.dev.js'",
+    "test": "./node_modules/karma/bin/karma start test/karma.conf.js",
     "test-e2e": "browser-sync start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
     "lint-js": "eslint 'src/**/*.js'",
     "lint-css": "stylelint 'src/**/*.scss' --syntax scss",
@@ -23,9 +24,17 @@
     "metalsmith-sass": "^1.3.0"
   },
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.8.0",
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.17.5",
     "eslint": "^3.8.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-rollup-plugin": "^0.2.4",
     "nightwatch": "^0.9.8",
+    "rollup-plugin-babel": "^2.6.1",
     "selenium-download": "^2.0.6",
     "stylelint": "^7.5.0"
   }
