--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,6 @@ addons:
     - unzip
     - google-chrome-stable
 script:
-    - npm run test-e2e
-before_install:
-    - wget http://chromedriver.storage.googleapis.com/2.21/chromedriver_linux64.zip
-    - unzip chromedriver_linux64.zip
-    - sudo chmod u+x chromedriver
-    - sudo mv chromedriver /usr/bin/
-
-    - export CHROME_BIN=chromium-browser
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-    - sleep 3 # give xvfb some time to start
+    - npm run test-e2e -- --env ci
 before_script:
     - npm install
