--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "build": "node index",
     "serve": "npm run build & ./node_modules/browser-sync/bin/browser-sync.js start --config 'bs-config.dev.js'",
     "test": "./node_modules/karma/bin/karma start test/karma.conf.js",
-    "test-e2e": "browser-sync start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
+    "test-e2e": "./node_modules/browser-sync/bin/browser-sync.js start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
     "lint-js": "eslint 'src/**/*.js'",
     "lint-css": "stylelint 'src/**/*.scss' --syntax scss",
-    "postinstall": "node test/nightwatch.conf.js"
+    "postinstall": "node test/nightwatch.conf.js",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "handlebars": "^4.0.5",
@@ -34,6 +35,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-rollup-plugin": "^0.2.4",
     "nightwatch": "^0.9.8",
+    "phantomjs": "^2.1.7",
     "rollup-plugin-babel": "^2.6.1",
     "selenium-download": "^2.0.6",
     "stylelint": "^7.5.0"
