--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ script:
     - npm run test-e2e -- --env ci
 before_script:
     - npm install
+before_install:
+    - openssl aes-256-cbc -K $encrypted_1b5469661a88_key -iv $encrypted_1b5469661a88_iv -in deploy_key.enc -out deploy_key -d
