--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: trusty
 language: node_js
 node_js:
     - "6.3.1"
+env:
+    global:
+    - ENCRYPTION_LABEL: "1b5469661a88"
+    - COMMIT_AUTHOR_EMAIL: "travis@codezilla.nl
 addons:
   packages:
     - unzip
@@ -11,5 +15,5 @@ script:
     - npm run test-e2e -- --env ci
 before_script:
     - npm install
-before_install:
-    - openssl aes-256-cbc -K $encrypted_1b5469661a88_key -iv $encrypted_1b5469661a88_iv -in deploy_key.enc -out deploy_key -d
+after_success:
+    - ./tools/ci/deploy.sh
