--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "static-site-example",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
     "build": "node index",
     "serve": "npm run build & ./node_modules/browser-sync/bin/browser-sync.js start --config 'bs-config.dev.js'",
     "test": "./node_modules/karma/bin/karma start test/karma.conf.js",
@@ -22,7 +23,8 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-rollup": "^0.2.0",
-    "metalsmith-sass": "^1.3.0"
+    "metalsmith-sass": "^1.3.0",
+    "normalize-css": "^2.3.1"
   },
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.8.0",
