--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "metalsmith-collections": "^0.7.0",
     "metalsmith-filter": "^1.0.2",
     "metalsmith-html-minifier": "^2.2.0",
+    "metalsmith-in-place": "^1.4.4",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
