--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-rollup": "^0.2.0",
     "metalsmith-sass": "^1.3.0",
+    "metalsmith-static": "0.0.5",
     "normalize-css": "^2.3.1"
   },
   "devDependencies": {
