--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "phantomjs": "^2.1.7",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "selenium-download": "^2.0.6",
     "stylelint": "^7.6.0"
   }
