--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.17.5",
+    "cli-real-favicon": "0.0.6",
     "eslint": "^3.8.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
