--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,16 @@ addons:
 script:
     - npm run test-e2e -- --env ci
 before_script:
+    - wget http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip
+    - unzip chromedriver_linux64.zip
+    - sudo chmod u+x chromedriver
+    - sudo mv chromedriver /usr/bin/
+
+    - export CHROME_BIN=chromium-browser
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+    - sleep 3 # give xvfb some time to start
+
     - npm install
     - npm run build
 after_success:
