--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,20 @@ env:
     - COMMIT_AUTHOR_EMAIL: "travis@codezilla.nl"
 addons:
   packages:
-    - unzip
-    - google-chrome-stable
+    # - unzip
+    # - google-chrome-stable
 script:
-    - npm run test-e2e -- --env ci
+    # - npm run test-e2e -- --env ci
 before_script:
-    - wget http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip
-    - unzip chromedriver_linux64.zip
-    - sudo chmod u+x chromedriver
-    - sudo mv chromedriver /usr/bin/
+    # - wget http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip
+    # - unzip chromedriver_linux64.zip
+    # - sudo chmod u+x chromedriver
+    # - sudo mv chromedriver /usr/bin/
 
-    - export CHROME_BIN=chromium-browser
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-    - sleep 3 # give xvfb some time to start
+    # - export CHROME_BIN=chromium-browser
+    # - export DISPLAY=:99.0
+    # - sh -e /etc/init.d/xvfb start
+    # - sleep 3 # give xvfb some time to start
 
     - npm install
     - npm run build
