--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "npm run serve",
     "build": "node index",
     "serve": "npm run build & ./node_modules/browser-sync/bin/browser-sync.js start --config 'bs-config.dev.js'",
-    "test": "./node_modules/karma/bin/karma start test/karma.conf.js",
+    "test": "",
     "test-e2e": "./node_modules/browser-sync/dist/bin.js start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
     "lint-js": "eslint 'src/**/*.js'",
     "lint-css": "stylelint 'src/scss/**/*.scss' --syntax scss",
