--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "start": "npm run serve",
     "build": "node index",
-    "serve": "npm run build & ./node_modules/browser-sync/bin/browser-sync.js start --config 'bs-config.dev.js'",
+    "serve": "npm run build & ./node_modules/.bin/browser-sync start --config 'bs-config.dev.js'",
     "test": "",
-    "test-e2e": "./node_modules/browser-sync/dist/bin.js start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
+    "test-e2e": "./node_modules/.bin/browser-sync start --config 'test/bs-config.e2e.js' & node_modules/.bin/nightwatch --config test/nightwatch.conf.js",
     "lint-js": "eslint 'src/**/*.js'",
     "lint-css": "stylelint 'src/scss/**/*.scss' --syntax scss",
     "postinstall": "node test/nightwatch.conf.js",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
-    "browser-sync": "^2.17.5",
+    "browser-sync": "^2.23.6",
     "cli-real-favicon": "0.0.6",
     "eslint": "^3.8.1",
     "jasmine-core": "^2.5.2",
