--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     - run: npm install
     - run: npm run build
     - name: Write CNAME file
-      uses: DamianReeves/write-file-action@v1
+      uses: DamianReeves/write-file-action
       with:
         path: build/CNAME
         contents: test.codezilla.nl
