--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -19,6 +19,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build
+    - name: Write CNAME file
+      uses: DamianReeves/write-file-action@master
+      with:
+        path: build/CNAME
+        contents: www.codezilla.nl
+        write-mode: overwrite
     - name: Deploy to GitHub Pages
       if: success()
       uses: crazy-max/ghaction-github-pages@v2
