--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -19,12 +19,18 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run build
+    - name: Write CNAME file
+      uses: DamianReeves/write-file-action@master
+      with:
+        path: build/CNAME
+        contents: www.codezilla.nl
+        write-mode: overwrite
     - name: Deploy to GitHub Pages
       if: success()
       uses: crazy-max/ghaction-github-pages@v2
       with:
         repo: codezilla-nl/codezilla-nl.github.io
-        target_branch: master
-        build_dir: public
+        target_branch: testrun
+        build_dir: build
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
