--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cli-real-favicon": "0.0.8",
     "eslint": "^4.18.2",
     "jasmine-core": "^2.5.2",
+    "jpegoptim-bin": "^6.0.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
