ci: test pr to trigger AWS amplify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static-site-example",
+  "name": "codezilla-website",
   "private": true,
   "scripts": {
     "start": "npm run serve",
