--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,6 +1,8 @@
 name: 'Amplify PR Preview'
 on:
   pull_request_target:
+    branches:
+      - master
     types: [review_requested]
 
 jobs:
@@ -10,7 +12,7 @@ jobs:
     - uses: actions/checkout@master
 
     - name: set branchname env
-      id: master
+      id: setenvname
       run: |
         # use GITHUB_HEAD_REF that is set to PR source branch
         echo "##[set-output name=setbranchname;]$(echo ${GITHUB_HEAD_REF})"
