--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-rollup": "^0.2.0",
-    "metalsmith-sass": "^1.3.0",
+    "metalsmith-sass": "^2.0.0",
     "metalsmith-static": "0.0.5",
+    "node-sass": "^7.0.1",
     "normalize-css": "^2.3.1"
   },
   "devDependencies": {
